--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -197,7 +197,8 @@ a.dropdown-item:visited{
 	max-width: 60vw;
 	margin-left: 6vw;
 
-	h1:first-of-type{
+	/*h1:first-of-type{*/
+	h1{
 		@extend .h2;
 		text-align: center;
 		margin-bottom: 1vh;
@@ -278,13 +279,25 @@ trix-editor {
 
 
 .nav-time-box{
-	border: dotted 1px black;
+	/*border: dotted 1px black;*/
 	padding: 0.5vh 1vw;
 	margin-right: 1vw;
-	background-color: white;
-	color: black;
+	/*background-color: white;*/
+	color: white;
 
 	li{
 		padding: 0 1vw;
 	}
+}
+
+
+.gray-progress-text{
+	margin: auto;
+	margin-bottom: 1vh;
+	color: black;
+}
+
+
+.prog-bar-nav{
+	min-width: 25vw;
 }
