create new daily journal view with table for mini form partial

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,7 +4,7 @@
 
 
 body{
-	padding: 6vh 2vw 2vh 2vw;
+	padding: 9vh 2vw 2vh 2vw;
 	background-color: #473939;
 	color: #c7ebd1;
 }
@@ -300,4 +300,14 @@ trix-editor {
 
 .prog-bar-nav{
 	min-width: 25vw;
+}
+
+
+
+
+
+
+.daily-journal-table{
+	width: 80vw;
+	margin: auto;
 }
